[project]
#template from https://github.com/pypa/sampleproject/blob/main/pyproject.toml
name = "SMT" # Required

version = "0.0.1" # Required

description = "Jumbled code for SMT analysis and simulation developed for the Weber Lab by Baljyot Singh Parmar" # Optional

readme = "README.md" # Optional

requires-python = "==3.10.9"


keywords = ["SMT"] # Optional

authors = [
  { name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" }, # Optional
]

maintainers = [
  { name = "Baljyot Singh Parmar", email = "baljyotparmar@hotmail.com" }, # Optional
]

dependencies = []
[tool.setuptools.packages.find]
include = ["SMT*"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
